# Mundus

./: .gitignore  CMakeLists.txt  CMakePresets.json  voronoi_cells.json
cmake/: Dependencies.cmake
include/geometry/: geometry-pool.h  types.h
include/image/: drawing.h  image.h  rgb.h  shapes.h
include/noise/: open-simplex-noise.h  perlin-noise-class.hpp  perlin-noise-map-class.h
include/simd/: vector8f.h  vector8i.h
include/terrain/: geometry.h  map-class.h
include/terrain/hex/: grid-class.hpp  hex-class.hpp  hex-grid-to-image.hpp  layout-class.hpp  orientation-class.hpp  types.hpp
include/terrain/tectonic/: cell.h  map-class.h  plate-class.h
include/voronoi/: cell.h  jittered-cell.h  json-serialization.h  polygon-class.h  types.h  voronoi-class.h
src/: CMakeLists.txt  main.cpp
src/noise/: CMakeLists.txt  perlin-noise-class.cpp  perlin-noise-map-class.cpp
src/simd/: CMakeLists.txt  vector8f.cpp  vector8i.cpp
src/terrain/: CMakeLists.txt  map-class.cpp
src/terrain/hex/: CMakeLists.txt  hex-class.cpp
src/terrain/tectonic/: CMakeLists.txt  map-class.cpp
src/voronoi/: CMakeLists.txt  json-serialization.cpp  polygon-class.cpp  voronoi-class.cpp
